2002-03-29  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_timer_event): don't stop parsing on
	/body, no other renderers do. Fixes #21968 

	* htmlgdkpainter.c (draw_background): fix mask comparison.

	* htmlgdkpainter.c (draw_background): move color calculation and
	allocation into the case where it is actually used.

2002-03-28  Larry Ewing  <lewing@ximian.com>

	* htmlgdkpainter.c (draw_background): optimize away the single
	pixel transarent gif case, it is simply too expensive over the
	wire.

2002-03-27  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (libgtkhtmldir): add trailing gtkhtml to not break
	includes. and use $(GKTHTML_RELEASE_STRING) rather than
	gtkhtml-$(GTKHTML_RELASE) since it is already defined.

	* Makefile.am: use GTKHTML_DATADIR where it makes sense.

2002-03-26  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (keybindingsdir): fix this dir from $release/gtkhtml
	to gtkhtml-release.

	* Makefile.am (libgtkhtmldir): add version to directory.

2002-03-20  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_factory_area_prepared): silently pass
	through if ip->pixbuf is NULL.  gdk-pixbuf has a very screwy api.

2002-03-11  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (calc_text_width): use correct len (in bytes) for
	gnome print function

	* htmlpainter.c (html_painter_calc_text_width_bytes): new method
	(correct_width): new optimized helper function, replaces old
	rewritting functions used in non-bytes version

	* htmltext.c (calc_word_width): use bytes version

	* htmlprinter.c (calc_text_width_bytes): new implementation

	* htmlgdkpainter.c (calc_text_width_bytes): new implementation

	* htmlpainter.c (html_painter_calc_text_width_bytes): new function
	which uses byte len instead of uc-char len (index)

	* htmlfontmanager.c (html_font_new): added nbsp and space width to
	the font structure

2002-03-07  Larry Ewing  <lewing@ximian.com>

	* htmltextslave.c (html_text_slave_get_text): cache this result.